application: protect against having no window

If nautilus is run with --gapplication-service it has no active window
active.

We were assuming there is always a window active, and therefore nautilus
was crashing if the active window was null.

To fix it add some safe guards.

https://bugzilla.gnome.org/show_bug.cgi?id=765045